crates/pwsh-ffi/include/devolutions_pwsh_ffi.h

/*
 * ABI v2 uses caller-owned sized structures. Set each `size` member to
 * sizeof(the structure) before calling. UTF-8 spans permit data == NULL only
 * when len == 0; all byte values must be valid UTF-8 and must not contain NUL.
 *
 * Every v2 operation accepts a call result. Diagnostics are copied into the
 * caller-provided storage; diagnostic_required always reports the full byte
 * count and diagnostic_written reports the copied byte count. The library
 * never retains any caller-provided pointer after an operation returns.
 */
struct dps_pwsh_abi_info {
    uint32_t size;
    uint32_t abi_version;
    uint64_t feature_flags;
    uint32_t minimum_compatible_abi_version;
    uint32_t reserved;
};
struct dps_pwsh_utf8_span {
    const uint8_t* data;
    size_t len;
};
/*
 * A data value is a tag plus bounded caller-owned payload bytes. `size` must
 * be sizeof(struct dps_pwsh_data_value), `flags` and `reserved` must be zero,
 * and the library never retains `data`. Scalar payloads use the documented
 * fixed encodings. Arrays and property bags use the nested binary envelope
 * documented in docs/in-process-ffi.md; they are not JSON or object handles.
 */
struct dps_pwsh_data_value {
    uint32_t size;
    uint32_t kind;
    uint32_t flags;
    uint32_t reserved;
    const uint8_t* data;
    size_t data_len;
};
/*
 * A trusted activation provides a SHA-256 pin for the complete manifest bytes.
 * The manifest then pins every payload file. The local-development policy is
 * deliberately unsafe: it accepts an unpinned manifest only and is never a
 * signature validation mechanism. flags and reserved must be zero.
 */
struct dps_pwsh_payload_activation {
    uint32_t size;
    uint32_t trust_policy;
    uint32_t flags;
    uint32_t reserved;
    struct dps_pwsh_utf8_span payload_path;
    struct dps_pwsh_utf8_span manifest_path;
    struct dps_pwsh_utf8_span manifest_sha256;
};
struct dps_pwsh_call_result {
    uint32_t size;
    int32_t status;
    uint32_t flags;
    uint32_t reserved;
    uint8_t* diagnostic;
    size_t diagnostic_capacity;
    size_t diagnostic_required;
    size_t diagnostic_written;
};
int32_t dps_pwsh_get_abi_info(struct dps_pwsh_abi_info* info);
/*
 * Compatibility-only local-development initializer. It loads the conventional
 * devolutions-pwsh-payload.json beside payload_path without a manifest pin.
 * Use dps_pwsh_v2_initialize_payload for every deployed application.
 */
int32_t dps_pwsh_v2_initialize_utf8(
    struct dps_pwsh_utf8_span payload_path,
    struct dps_pwsh_call_result* result);
/*
 * Validates canonical paths, manifest pin/schema, target RID/architecture,
 * all required payload-file hashes, and declared runtime/bindings compatibility
 * before hostfxr is loaded. The manifest itself may live outside the payload;
 * its SHA-256 pin is the trusted activation input.
 */
int32_t dps_pwsh_v2_initialize_payload(
    const struct dps_pwsh_payload_activation* activation,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_create(
    uint64_t* handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_release(
    uint64_t handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_command_utf8(
    uint64_t handle,
    struct dps_pwsh_utf8_span command,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_script_utf8(
    uint64_t handle,
    struct dps_pwsh_utf8_span script,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_argument_utf8(
    uint64_t handle,
    struct dps_pwsh_utf8_span argument,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_parameter_string_utf8(
    uint64_t handle,
    struct dps_pwsh_utf8_span name,
    struct dps_pwsh_utf8_span value,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_parameter_i64(
    uint64_t handle,
    struct dps_pwsh_utf8_span name,
    int64_t value,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_command_utf8_local(
    uint64_t handle,
    struct dps_pwsh_utf8_span command,
    uint32_t use_local_scope,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_script_utf8_local(
    uint64_t handle,
    struct dps_pwsh_utf8_span script,
    uint32_t use_local_scope,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_argument_value(
    uint64_t handle,
    const struct dps_pwsh_data_value* value,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_parameter_value(
    uint64_t handle,
    struct dps_pwsh_utf8_span name,
    const struct dps_pwsh_data_value* value,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_parameter_switch(
    uint64_t handle,
    struct dps_pwsh_utf8_span name,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_input_value(
    uint64_t handle,
    const struct dps_pwsh_data_value* value,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_complete_input(
    uint64_t handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_reset_input(
    uint64_t handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_add_statement(
    uint64_t handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_clear(
    uint64_t handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_invoke_utf8(
    uint64_t handle,
    uint8_t* buffer,
    size_t buffer_len,
    size_t* required_len,
    struct dps_pwsh_call_result* result);
/*
 * Result handles are immutable snapshots independent of their builder handle.
 * Release each successfully returned result with dps_pwsh_v2_result_release.
 * Streams retain at most 32 records and each returned UTF-8 field is limited
 * to 4,096 UTF-16 code units. Stream and record flags report dropped records
 * and truncated fields. Sequence entries form a global capture order across
 * every retained stream record; dropped records set RESULT_SEQUENCE_TRUNCATED.
 */
int32_t dps_pwsh_v2_invoke(
    uint64_t handle,
    uint64_t* result_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_result_release(
    uint64_t result_handle,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_result_get_info(
    uint64_t result_handle,
    uint32_t* flags,
    uint32_t* sequence_count,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_result_get_metadata(
    uint64_t result_handle,
    uint32_t* state,
    uint64_t* invocation_id,
    uint32_t* had_errors,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_result_get_stream_info(
    uint64_t result_handle,
    uint32_t stream,
    uint32_t* record_count,
    uint32_t* flags,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_result_get_stream_record_info(
    uint64_t result_handle,
    uint32_t stream,
    uint32_t record_index,
    uint64_t* sequence,
    uint32_t* flags,
    struct dps_pwsh_call_result* result);
int32_t dps_pwsh_v2_result_copy_stream_record_field_utf8(
    uint64_t result_handle,
    uint32_t stream,
    uint32_t record_index,
    uint32_t field,
    uint8_t* buffer,
    size_t buffer_len,
    size_t* required_len,
    struct dps_pwsh_call_result* result);
/*
 * Total and dropped counts include records observed after a stream reached its
 * retained-record bound. They are independent of the retained record count
 * returned by result_get_stream_info.
 */
int32_t dps_pwsh_v2_result_get_stream_totals(
    uint64_t result_handle,
    uint32_t stream,
    uint64_t* total_record_count,
    uint64_t* dropped_record_count,
    struct dps_pwsh_call_result* result);
/*
 * Projection flags are the DPS_PWSH_RESULT_RECORD_*_PRESENT/TRUNCATED bits.
 * Counts describe the copied output object property/type-name projection; they
 * are zero for record kinds without that projection.
 */
int32_t dps_pwsh_v2_result_get_stream_record_projection_info(
    uint64_t result_handle,
    uint32_t stream,
    uint32_t record_index,
    uint32_t* property_entry_count,
    uint32_t* dropped_property_entry_count,
    uint32_t* type_name_count,
    uint32_t* dropped_type_name_count,
    uint32_t* projection_flags,
    struct dps_pwsh_call_result* result);